[workspace]
members = [
    "build_tools",
    "mlib",
    "mtest",
    "mshell",
    "vm_core",
]
resolver = "2"



[package]
name = "srtmt"
version = "0.1.0"
edition = "2021"
description = "A sorta simulation of real time multithreading without actual multithreading"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
vm_core = { path = "vm_core" }